--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,8 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+*.*~
+
+target
+java/src/META-INF/MANIFEST.MF
+.DS_Store
